force-app/main/default/objects/Borrowing__c/Borrowing__c.object-meta.xml
<CustomObject>
    <description>Represents a book borrowing transaction</description>
    <label>Borrowing</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Borrowing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrowings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>