force-app/main/default/objects/Borrowing__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>The book that is being borrowed</description>
    <inlineHelpText>The book that is being borrowed</inlineHelpText>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Borrowings</relationshipLabel>
    <relationshipName>Borrowings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>