force-app/main/default/objects/Borrowing__c/fields/Book_Copy__c.field-meta.xml
<CustomField>
    <fullName>Book_Copy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Copy of the book</description>
    <inlineHelpText>Copy of the book</inlineHelpText>
    <label>Book Copy</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Book_Copy__c.Book__c</field>
            <operation>equals</operation>
            <valueField>$Source.Book__c</valueField>
        </filterItems>
        <filterItems>
            <field>Book_Copy__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Book_Copy__c</referenceTo>
    <relationshipLabel>Borrowings</relationshipLabel>
    <relationshipName>Borrowings</relationshipName>
    <type>Lookup</type>
</CustomField>