force-app/main/default/objects/Borrowing__c/fields/Devolution_Status__c.field-meta.xml
<CustomField>
    <fullName>Devolution_Status__c</fullName>
    <description>Book devolution status</description>
    <inlineHelpText>Book devolution status</inlineHelpText>
    <label>Devolution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>