force-app/main/default/objects/Borrowing__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Deadline to return the book</description>
    <inlineHelpText>Deadline to return the book</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>