force-app/main/default/objects/Borrowing__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Initial borrow date</description>
    <inlineHelpText>Initial borrow date</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>