force-app/main/default/objects/Borrowing__c/validationRules/Book_Copy_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Book_Copy_Validation</fullName>
    <active>true</active>
    <description>The book copy must be available and related to the Book record</description>
    <errorConditionFormula>OR (
	   AND (
				    ISNEW(), NOT(ISPICKVAL(Book_Copy__r.Status__c, &apos;Available&apos;))
				),
				AND (
	       ISCHANGED(Book_Copy__c), NOT(ISPICKVAL(Book_Copy__r.Status__c, &apos;Available&apos;))
				),
    Book__c != Book_Copy__r.Book__c			
)</errorConditionFormula>
    <errorDisplayField>Book_Copy__c</errorDisplayField>
    <errorMessage>The book copy must be available and related to the Book record</errorMessage>
</ValidationRule>