force-app/main/default/objects/Borrowing__c/validationRules/Devolution_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Devolution_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				ISPICKVAL(Status__c , &apos;Closed&apos;), 
				ISBLANK(TEXT(Devolution_Status__c))
)</errorConditionFormula>
    <errorDisplayField>Devolution_Status__c</errorDisplayField>
    <errorMessage>Field required when the borrowing status is closed.</errorMessage>
</ValidationRule>